added balance api
